<resources>
    <string name="app_name">WILI</string>
    <string name="enterSerie">Introduce una serie.</string>
    <string name="subir" translatable="false"> + </string>
    <string name="bajar" translatable="false"> - </string>
    <string name="season">Temporada</string>
    <string name="cap">Capítulo</string>
    <string name="nombrenuevo">Nombre de la Serie: </string>
    <string name="temporadanuevo">Temporada actual: </string>
    <string name="capitulonuevo">Capitulo actual: </string>
    <string name="enterManga">Introduce un manga.</string>
    <string name="mangaNuevo">Nombre del manga/comic: </string>
    <string name="listaSeries">Toca aqui para ver todas tus series guardadas.</string>
    <string name="pagActual">Introduce tu pagina actual: </string>
    <string name="enterLibro">Introduce un libro: </string>
    <string name="pagTotales">Introduce sus paginas totales (opcional): </string>
    <string name="title_activity_login">Sign in</string>
    <string name="enterEmail">Introduce e-mail:</string>
    <string name="enterPass">Introduce contraseña: </string>
    <string name="enterNewPass">Introduce nueva contraseña: </string>
    <string name="enterNick">Introduce nuevo nick: </string>
    <string name="wili" translatable="false">Where I Left It?</string>
    <string name="logout">Desconectar</string>
    <string name="logoutExit">Desconectar y salir</string>
</resources>
