<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/enterNick"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/nick"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/enterEmail"
        android:layout_gravity="center"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:id="@+id/emailNuevo"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/enterNewPass"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/nuevaContraseña"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:inputType="textPassword"/>

</LinearLayout>