<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradadobackground"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/autoCompletarSeries"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:hint="@string/enterSerie"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/season"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/season"
                android:background="#00000000"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/cap"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/cap"
                android:background="#00000000"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textSeason"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textCap"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textAlignment="center"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TableRow >

                <Button
                    android:id="@+id/sustractSeason"
                    android:layout_width="40dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:text="@string/bajar"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/addSeason"
                    android:layout_width="40dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:text="@string/subir"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/sustractCap"
                    android:layout_weight="1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/bajar"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/addCap"
                    android:layout_weight="1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/subir"
                    android:visibility="invisible"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:src="@mipmap/newentry"
        android:id="@+id/nuevaSerie"/>

</FrameLayout>